resource-groups/sql-mi-lab/azuredeploy.mi-instance.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "dtap": {
            "type": "string",
            "allowedValues": [
                "production",
                "user acceptance test",
                "test",
                "development",
                "custom-development"
            ]
        },
        "ring": {
            "type": "int"
        },
        "location": {
            "type": "string"
        },
        "sql-mi-name": {
            "type": "string"
        },
        "virtualNetworkResourceGroupName": {
            "type": "string"
        },
        "vnet": {
            "type": "string"
        },
        "subnet": {
            "type": "string"
        },
        "key-vault-name": {
          "type": "string"
        },
        "administratorLogin": {
            "type": "string"
        },
        "administratorLoginPassword": {
            "type": "securestring"
        },
        "hardwareFamily": {
            "defaultValue": "Gen5",
            "type": "string"
        },
        "dnsZonePartner": {
            "defaultValue": "",
            "type": "string"
        },
        "collation": {
            "type": "string",
            "defaultValue": "SQL_Latin1_General_CP1_CI_AS"
        },
        "proxyOverride": {
            "type": "string",
            "defaultValue": ""
        },
        "publicDataEndpointEnabled": {
            "type": "bool",
            "defaultValue": false
        },
        "timezoneId": {
            "type": "string",
            "defaultValue": "UTC"
        }
    },
    "variables": {
        "routeTableName": "[concat('rt-', parameters('sql-mi-name'))]",
        "networkSecurityGroupName": "[concat('nsg-', parameters('sql-mi-name'))]",
        "subnetRefId": "[resourceId(parameters('virtualNetworkResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets', parameters('vnet'), parameters('subnet'))]",
        "locations": [
            "australiacentral",
            "australiacentral2",
            "australiaeast",
            "australiasoutheast",
            "brazilsouth",
            "canadacentral",
            "canadaeast",
            "centralus",
            "eastasia",
            "eastus",
            "eastus2",
            "francecentral",
            "francesouth",
            "centralindia",
            "southindia",
            "westindia",
            "japaneast",
            "japanwest",
            "koreacentral",
            "koreasouth",
            "northcentralus",
            "northeurope",
            "southafricanorth",
            "southcentralus",
            "southeastasia",
            "uksouth",
            "ukwest",
            "centraluseuap",
            "eastus2euap",
            "westcentralus",
            "westeurope",
            "westus",
            "westus2"
        ],
        "routesNIP": [
            {
                "name": "subnet_to_vnetlocal",
                "properties": {
                    "addressPrefix": "<subnet_range>",
                    "nextHopType": "VnetLocal"
                }
            },
            {
                "name": "mi-13-64-11-nexthop-internet",
                "properties": {
                    "addressPrefix": "13.64.0.0/11",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-13-96-13-nexthop-internet",
                "properties": {
                    "addressPrefix": "13.96.0.0/13",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-13-104-14-nexthop-internet",
                "properties": {
                    "addressPrefix": "13.104.0.0/14",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-20-8-nexthop-internet",
                "properties": {
                    "addressPrefix": "20.0.0.0/8",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-23-96-13-nexthop-internet",
                "properties": {
                    "addressPrefix": "23.96.0.0/13",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-40-64-10-nexthop-internet",
                "properties": {
                    "addressPrefix": "40.64.0.0/10",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-42-159-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "42.159.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-51-8-nexthop-internet",
                "properties": {
                    "addressPrefix": "51.0.0.0/8",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-52-8-nexthop-internet",
                "properties": {
                    "addressPrefix": "52.0.0.0/8",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-64-4-18-nexthop-internet",
                "properties": {
                    "addressPrefix": "64.4.0.0/18",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-65-52-14-nexthop-internet",
                "properties": {
                    "addressPrefix": "65.52.0.0/14",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-66-119-144-20-nexthop-internet",
                "properties": {
                    "addressPrefix": "66.119.144.0/20",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-70-37-17-nexthop-internet",
                "properties": {
                    "addressPrefix": "70.37.0.0/17",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-70-37-128-18-nexthop-internet",
                "properties": {
                    "addressPrefix": "70.37.128.0/18",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-91-190-216-21-nexthop-internet",
                "properties": {
                    "addressPrefix": "91.190.216.0/21",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-94-245-64-18-nexthop-internet",
                "properties": {
                    "addressPrefix": "94.245.64.0/18",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-103-9-8-22-nexthop-internet",
                "properties": {
                    "addressPrefix": "103.9.8.0/22",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-103-25-156-22-nexthop-internet",
                "properties": {
                    "addressPrefix": "103.25.156.0/22",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-103-36-96-22-nexthop-internet",
                "properties": {
                    "addressPrefix": "103.36.96.0/22",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-103-255-140-22-nexthop-internet",
                "properties": {
                    "addressPrefix": "103.255.140.0/22",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-104-40-13-nexthop-internet",
                "properties": {
                    "addressPrefix": "104.40.0.0/13",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-104-146-15-nexthop-internet",
                "properties": {
                    "addressPrefix": "104.146.0.0/15",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-104-208-13-nexthop-internet",
                "properties": {
                    "addressPrefix": "104.208.0.0/13",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-111-221-16-20-nexthop-internet",
                "properties": {
                    "addressPrefix": "111.221.16.0/20",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-111-221-64-18-nexthop-internet",
                "properties": {
                    "addressPrefix": "111.221.64.0/18",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-129-75-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "129.75.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-131-253-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "131.253.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-132-245-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "132.245.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-134-170-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "134.170.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-134-177-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "134.177.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-137-116-15-nexthop-internet",
                "properties": {
                    "addressPrefix": "137.116.0.0/15",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-137-135-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "137.135.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-138-91-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "138.91.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-138-196-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "138.196.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-139-217-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "139.217.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-139-219-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "139.219.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-141-251-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "141.251.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-146-147-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "146.147.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-147-243-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "147.243.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-150-171-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "150.171.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-150-242-48-22-nexthop-internet",
                "properties": {
                    "addressPrefix": "150.242.48.0/22",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-157-54-15-nexthop-internet",
                "properties": {
                    "addressPrefix": "157.54.0.0/15",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-157-56-14-nexthop-internet",
                "properties": {
                    "addressPrefix": "157.56.0.0/14",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-157-60-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "157.60.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-167-220-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "167.220.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-168-61-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "168.61.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-168-62-15-nexthop-internet",
                "properties": {
                    "addressPrefix": "168.62.0.0/15",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-191-232-13-nexthop-internet",
                "properties": {
                    "addressPrefix": "191.232.0.0/13",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-192-32-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "192.32.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-192-48-225-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "192.48.225.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-192-84-159-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "192.84.159.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-192-84-160-23-nexthop-internet",
                "properties": {
                    "addressPrefix": "192.84.160.0/23",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-192-100-102-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "192.100.102.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-192-100-103-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "192.100.103.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-192-197-157-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "192.197.157.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-193-149-64-19-nexthop-internet",
                "properties": {
                    "addressPrefix": "193.149.64.0/19",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-193-221-113-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "193.221.113.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-194-69-96-19-nexthop-internet",
                "properties": {
                    "addressPrefix": "194.69.96.0/19",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-194-110-197-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "194.110.197.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-198-105-232-22-nexthop-internet",
                "properties": {
                    "addressPrefix": "198.105.232.0/22",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-198-200-130-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "198.200.130.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-198-206-164-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "198.206.164.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-199-60-28-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "199.60.28.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-199-74-210-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "199.74.210.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-199-103-90-23-nexthop-internet",
                "properties": {
                    "addressPrefix": "199.103.90.0/23",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-199-103-122-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "199.103.122.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-199-242-32-20-nexthop-internet",
                "properties": {
                    "addressPrefix": "199.242.32.0/20",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-199-242-48-21-nexthop-internet",
                "properties": {
                    "addressPrefix": "199.242.48.0/21",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-202-89-224-20-nexthop-internet",
                "properties": {
                    "addressPrefix": "202.89.224.0/20",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-13-120-21-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.13.120.0/21",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-14-180-22-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.14.180.0/22",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-79-135-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.79.135.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-79-179-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.79.179.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-79-181-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.79.181.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-79-188-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.79.188.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-79-195-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.79.195.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-79-196-23-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.79.196.0/23",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-79-252-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.79.252.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-152-18-23-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.152.18.0/23",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-152-140-23-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.152.140.0/23",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-231-192-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.231.192.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-231-194-23-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.231.194.0/23",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-231-197-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.231.197.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-231-198-23-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.231.198.0/23",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-231-200-21-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.231.200.0/21",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-231-208-20-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.231.208.0/20",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-204-231-236-24-nexthop-internet",
                "properties": {
                    "addressPrefix": "204.231.236.0/24",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-205-174-224-20-nexthop-internet",
                "properties": {
                    "addressPrefix": "205.174.224.0/20",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-206-138-168-21-nexthop-internet",
                "properties": {
                    "addressPrefix": "206.138.168.0/21",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-206-191-224-19-nexthop-internet",
                "properties": {
                    "addressPrefix": "206.191.224.0/19",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-207-46-16-nexthop-internet",
                "properties": {
                    "addressPrefix": "207.46.0.0/16",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-207-68-128-18-nexthop-internet",
                "properties": {
                    "addressPrefix": "207.68.128.0/18",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-208-68-136-21-nexthop-internet",
                "properties": {
                    "addressPrefix": "208.68.136.0/21",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-208-76-44-22-nexthop-internet",
                "properties": {
                    "addressPrefix": "208.76.44.0/22",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-208-84-21-nexthop-internet",
                "properties": {
                    "addressPrefix": "208.84.0.0/21",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-209-240-192-19-nexthop-internet",
                "properties": {
                    "addressPrefix": "209.240.192.0/19",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-213-199-128-18-nexthop-internet",
                "properties": {
                    "addressPrefix": "213.199.128.0/18",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-216-32-180-22-nexthop-internet",
                "properties": {
                    "addressPrefix": "216.32.180.0/22",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "mi-216-220-208-20-nexthop-internet",
                "properties": {
                    "addressPrefix": "216.220.208.0/20",
                    "nextHopType": "Internet"
                }
            }
        ],
        "routesJumpboxes": [
            {
                "name": "SqlManagement_deployment",
                "properties": {
                    "addressPrefix": "65.55.188.0/24",
                    "nextHopType": "Internet"
                }
            }
        ],
        "routesSAW": [
            {
                "name": "SqlManagement_supportability_1",
                "properties": {
                    "addressPrefix": "207.68.190.32/27",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "SqlManagement_supportability_2",
                "properties": {
                    "addressPrefix": "13.106.78.32/27",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "SqlManagement_supportability_3",
                "properties": {
                    "addressPrefix": "13.106.174.32/27",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "SqlManagement_supportability_4",
                "properties": {
                    "addressPrefix": "13.106.4.96/27",
                    "nextHopType": "Internet"
                }
            }
        ],
        "routesRunners": [
            {
                "name": "SqlManagement_automation_global_1",
                "properties": {
                    "addressPrefix": "104.214.36.3/32",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "SqlManagement_automation_global_2",
                "properties": {
                    "addressPrefix": "104.214.108.80/32",
                    "nextHopType": "Internet"
                }
            }
        ],
        "routesDSMS": [
            {
                "name": "SqlManagement_security_global_1",
                "properties": {
                    "addressPrefix": "52.179.184.76/32",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "SqlManagement_security_global_2",
                "properties": {
                    "addressPrefix": "52.187.116.202/32",
                    "nextHopType": "Internet"
                }
            },
            {
                "name": "SqlManagement_security_global_3",
                "properties": {
                    "addressPrefix": "52.177.202.6/32",
                    "nextHopType": "Internet"
                }
            }
        ],
        "WestEurope": {
            "controlPlane": [
                {
                    "name": "SqlManagement_controlPlane_primary",
                    "properties": {
                        "addressPrefix": "191.237.232.75/32",
                        "nextHopType": "Internet"
                    }
                },
                {
                    "name": "SqlManagement_controlPlane_backup1",
                    "properties": {
                        "addressPrefix": "40.68.37.158/32",
                        "nextHopType": "Internet"
                    }
                }
            ],
            "controlPlane_SqlManagementTag": [
                {
                    "name": "SqlManagement_controlPlane_az01",
                    "properties": {
                        "addressPrefix": "13.69.64.96/27",
                        "nextHopType": "Internet"
                    }
                },
                {
                    "name": "SqlManagement_controlPlane_az02",
                    "properties": {
                        "addressPrefix": "52.236.186.96/27",
                        "nextHopType": "Internet"
                    }
                },
                {
                    "name": "SqlManagement_controlPlane_az03",
                    "properties": {
                        "addressPrefix": "13.69.106.96/27",
                        "nextHopType": "Internet"
                    }
                }
            ],
            "runners": [
                {
                    "name": "SqlManagement_automation_backup",
                    "properties": {
                        "addressPrefix": "52.169.6.70/32",
                        "nextHopType": "Internet"
                    }
                },
                {
                    "name": "SqlManagement_automation_primary",
                    "properties": {
                        "addressPrefix": "52.166.50.138/32",
                        "nextHopType": "Internet"
                    }
                }
            ],
            "DSMS": [
                {
                    "name": "SqlManagement_security_primary",
                    "properties": {
                        "addressPrefix": "104.214.215.225/32",
                        "nextHopType": "Internet"
                    }
                },
                {
                    "name": "SqlManagement_security_backup",
                    "properties": {
                        "addressPrefix": "52.232.84.151/32",
                        "nextHopType": "Internet"
                    }
                }
            ]
        },
        "routesUnion": "[if(contains(variables('locations'), tolower(parameters('location'))), union(variables('routesNIP'), variables('routesJumpboxes'), variables('routesSAW'), variables('routesRunners'), variables('routesDSMS'), variables(parameters('location')).controlPlane, variables(parameters('location')).controlPlane_SqlManagementTag, variables(parameters('location')).runners, variables(parameters('location')).DSMS), union(variables('routesNIP'), variables('routesJumpboxes'), variables(' [...]
        "defaultNSGs": [
            {
                "name": "allow_management_inbound",
                "properties": {
                    "description": "Allow inbound management traffic",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRanges": [
                        "9000",
                        "9003",
                        "1438",
                        "1440",
                        "1452"
                    ],
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 100,
                    "direction": "Inbound"
                }
            },
            {
                "name": "allow_misubnet_inbound",
                "properties": {
                    "description": "Allow inbound traffic inside the subnet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "<subnet_range>",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 200,
                    "direction": "Inbound"
                }
            },
            {
                "name": "allow_health_probe_inbound",
                "properties": {
                    "description": "Allow health probe",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "AzureLoadBalancer",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 300,
                    "direction": "Inbound"
                }
            },
            {
                "name": "allow_tds_inbound",
                "properties": {
                    "description": "Allow access to data",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "1433",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 1000,
                    "direction": "Inbound"
                }
            },
            {
                "name": "allow_redirect_inbound",
                "properties": {
                    "description": "Allow inbound redirect traffic to Managed Instance inside the virtual network",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "11000-11999",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 1100,
                    "direction": "Inbound"
                }
            },
            {
                "name": "allow_geodr_inbound",
                "properties": {
                    "description": "Allow inbound geodr traffic inside the virtual network",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "5022",
                    "sourceAddressPrefix": "VirtualNetwork",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 1200,
                    "direction": "Inbound"
                }
            },
            {
                "name": "deny_all_inbound",
                "properties": {
                    "description": "Deny all other inbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 4096,
                    "direction": "Inbound"
                }
            },
            {
                "name": "allow_management_outbound",
                "properties": {
                    "description": "Allow outbound management traffic",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRanges": [
                        "80",
                        "443",
                        "12000"
                    ],
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "[if(contains(variables('locations'), tolower(parameters('location'))), '*', '*')]",
                    "access": "Allow",
                    "priority": 100,
                    "direction": "Outbound"
                }
            },
            {
                "name": "allow_misubnet_outbound",
                "properties": {
                    "description": "Allow outbound traffic inside the subnet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "<subnet_range>",
                    "access": "Allow",
                    "priority": 200,
                    "direction": "Outbound"
                }
            },
            {
                "name": "allow_linkedserver_outbound",
                "properties": {
                    "description": "Allow outbound linkedserver traffic inside the virtual network",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "1433",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 1000,
                    "direction": "Outbound"
                }
            },
            {
                "name": "allow_redirect_outbound",
                "properties": {
                    "description": "Allow outbound redirect traffic to Managed Instance inside the virtual network",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "11000-11999",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 1100,
                    "direction": "Outbound"
                }
            },
            {
                "name": "allow_geodr_outbound",
                "properties": {
                    "description": "Allow outbound geodr traffic inside the virtual network",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "5022",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "VirtualNetwork",
                    "access": "Allow",
                    "priority": 1200,
                    "direction": "Outbound"
                }
            },
            {
                "name": "deny_all_outbound",
                "properties": {
                    "description": "Deny all other outbound traffic",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 4096,
                    "direction": "Outbound"
                }
            }
        ],
        "allowFromInternetTo3342NSG": [
            {
                "name": "public_endpoint_inbound",
                "properties": {
                    "description": "Allow inbound traffic to Managed Instance through public endpoint",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "3342",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 1300,
                    "direction": "Inbound"
                }
            }
        ],
        "allowFromAzureCloudTo3342NSG": [
            {
                "name": "public_endpoint_inbound",
                "properties": {
                    "description": "Allow inbound traffic to Managed Instance through public endpoint",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "3342",
                    "sourceAddressPrefix": "AzureCloud",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 1300,
                    "direction": "Inbound"
                }
            }
        ],
        "disallowTrafficTo3342NSG": [
            {
                "name": "public_endpoint_inbound",
                "properties": {
                    "description": "Deny inbound traffic to Managed Instance through public endpoint",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "3342",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 1300,
                    "direction": "Inbound"
                }
            }
        ],
        "unionNSGs": "[if(and(parameters('publicDataEndpointEnabled'), not(empty(parameters('nsgForPublicEndpoint')))), union(variables('defaultNSGs'), variables(parameters('nsgForPublicEndpoint'))), variables('defaultNSGs'))]",
        "administratorLoginPassword": {
            "reference": {
                "keyVault": {
                "id": "[resourceId(subscription().subscriptionId, resourceGroup().name, 'Microsoft.KeyVault/vaults', parameters('key-vault-name'))]"
            },
            "secretName": "[parameters('administratorLogin')]"
          }
        }
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('networkSecurityGroupName')]",
            "apiVersion": "2017-10-01",
            "location": "[parameters('location')]",
            "properties": {
                "copy": [
                    {
                        "name": "securityRules",
                        "count": "[length(variables('unionNSGs'))]",
                        "input": {
                            "name": "[variables('unionNSGs')[copyIndex('securityRules')].name]",
                            "properties": {
                                "description": "[variables('unionNSGs')[copyIndex('securityRules')].properties.description]",
                                "protocol": "[variables('unionNSGs')[copyIndex('securityRules')].properties.protocol]",
                                "sourcePortRange": "[variables('unionNSGs')[copyIndex('securityRules')].properties.sourcePortRange]",
                                "[if(contains(variables('unionNSGs')[copyIndex('securityRules')].properties, 'destinationPortRange'), 'destinationPortRange', 'destinationPortRanges')]": "[if(contains(variables('unionNSGs')[copyIndex('securityRules')].properties, 'destinationPortRange'), variables('unionNSGs')[copyIndex('securityRules')].properties.destinationPortRange, variables('unionNSGs')[copyIndex('securityRules')].properties.destinationPortRanges)]",
                                "sourceAddressPrefix": "[replace(variables('unionNSGs')[copyIndex('securityRules')].properties.sourceAddressPrefix, '<subnet_range>', reference(resourceId(parameters('virtualNetworkResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets', parameters('vnet'), parameters('subnet')), '2017-10-01').addressPrefix)]",
                                "destinationAddressPrefix": "[replace(variables('unionNSGs')[copyIndex('securityRules')].properties.destinationAddressPrefix, '<subnet_range>', reference(resourceId(parameters('virtualNetworkResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets', parameters('vnet'), parameters('subnet')), '2017-10-01').addressPrefix)]",
                                "access": "[variables('unionNSGs')[copyIndex('securityRules')].properties.access]",
                                "priority": "[variables('unionNSGs')[copyIndex('securityRules')].properties.priority]",
                                "direction": "[variables('unionNSGs')[copyIndex('securityRules')].properties.direction]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/routeTables",
            "name": "[variables('routeTableName')]",
            "apiVersion": "2018-02-01",
            "location": "[parameters('location')]",
            "properties": {
                "disableBgpRoutePropagation": false,
                "copy": [
                    {
                        "name": "routes",
                        "count": "[length(variables('routesUnion'))]",
                        "input": {
                            "name": "[variables('routesUnion')[copyIndex('routes')].name]",
                            "properties": {
                                "addressPrefix": "[replace(variables('routesUnion')[copyIndex('routes')].properties.addressPrefix, '<subnet_range>', reference(resourceId(parameters('virtualNetworkResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets', parameters('vnet'), parameters('subnet')), '2017-10-01').addressPrefix)]",
                                "nextHopType": "[variables('routesUnion')[copyIndex('routes')].properties.nextHopType]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2017-05-10",
            "name": "updateSubnetTemplate",
            "type": "Microsoft.Resources/deployments",
            "resourceGroup": "[parameters('virtualNetworkResourceGroupName')]",
            "dependsOn": [
                "[variables('routeTableName')]",
                "[variables('networkSecurityGroupName')]"
            ],
            "properties": {
                "mode": "Incremental",
                "template": {
                    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
                    "contentVersion": "1.0.0.0",
                    "resources": [
                        {
                            "type": "Microsoft.Network/virtualNetworks/subnets",
                            "name": "[concat(parameters('vnet'), '/', parameters('subnet'))]",
                            "apiVersion": "2018-04-01",
                            "properties": {
                                "addressPrefix": "[reference(resourceId(parameters('virtualNetworkResourceGroupName'), 'Microsoft.Network/virtualNetworks/subnets', parameters('vnet'), parameters('subnet')), '2018-04-01').addressPrefix]",
                                "routeTable": {
                                    "id": "[resourceId('Microsoft.Network/routeTables', variables('routeTableName'))]"
                                },
                                "networkSecurityGroup": {
                                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
                                }
                            }
                        }
                    ]
                }
            }
        },
        {
            "type": "Microsoft.Sql/managedInstances",
            "name": "[parameters('sql-mi-name')]",
            "apiVersion": "2015-05-01-preview",
            "location": "[parameters('location')]",
            "tags": {
              "dtap": "[parameters('dtap')]"
            },
            "identity": {
                "type": "SystemAssigned"
            },
            "sku": {
                "name": "GP_Gen5",
                "tier": "GeneralPurpose"
            },
            "properties": {
                "administratorLogin": "[parameters('administratorLogin')]",
                "administratorLoginPassword": "[parameters('administratorLoginPassword')]",
                "subnetId": "[variables('subnetRefId')]",
                "storageSizeInGB": "32",
                "vCores": "8",
                "licenseType": "LicenseIncluded",
                "hardwareFamily": "[parameters('hardwareFamily')]",
                "dnsZonePartner": "[parameters('dnsZonePartner')]",
                "collation": "[parameters('collation')]",
                "proxyOverride": "[parameters('proxyOverride')]",
                "publicDataEndpointEnabled": "[parameters('publicDataEndpointEnabled')]",
                "timezoneId": "[parameters('timezoneId')]"
            }
        }
    ],
    "outputs": {
    }
}
